[gd_scene load_steps=10 format=3 uid="uid://d1bdi8vwmmjdu"]

[ext_resource type="Script" path="res://Scripts/Inimigo/inimigo_script.gd" id="1_g44xy"]
[ext_resource type="PackedScene" uid="uid://dwem01y40spx6" path="res://Cenas/VidaJogadorCena.tscn" id="2_lxw0x"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a38y7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ey0dl"]
albedo_color = Color(1, 0, 0.0627451, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2s0db"]
material = SubResource("StandardMaterial3D_ey0dl")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3sc7r"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="PrismMesh" id="PrismMesh_uyl06"]
material = SubResource("StandardMaterial3D_3sc7r")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ius84"]

[sub_resource type="ViewportTexture" id="ViewportTexture_k1cnx"]
viewport_path = NodePath("SubViewport")

[node name="Inimigo" type="CharacterBody3D" node_paths=PackedStringArray("area", "barraVida", "timer")]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_g44xy")
vidaMax = 20.0
area = NodePath("Area3D")
barraVida = NodePath("SubViewport/ProgressBar")
timer = NodePath("Timer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_a38y7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_2s0db")

[node name="bico" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.610541, -0.602534)
mesh = SubResource("PrismMesh_uyl06")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_ius84")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true

[node name="ProgressBar" parent="SubViewport" instance=ExtResource("2_lxw0x")]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.36741, 0)
billboard = 1
texture = SubResource("ViewportTexture_k1cnx")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
